Project

General

Profile

Actions

Bug #51559

closed

radosgw-admin create subuser with a existing access-key has not error log

Added by lei cao almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
rgw radosgw-admin
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

radosgw-admin create subuser with a existing access-key has not error log, the subuser can be created

radosgw-admin user create --uid cl --display-name cl --access-key cl --secret cl
{
    "user_id": "cl",
    "display_name": "cl",
    "email": "",
    "suspended": 0,
    "max_buckets": 1000,
    "subusers": [],
    "keys": [
        {
            "user": "cl",
            "access_key": "cl",
            "secret_key": "cl" 
        }
    ],
    "swift_keys": [],
    "caps": [],
    "op_mask": "read, write, delete",
    "default_placement": "",
    "default_storage_class": "",
    "placement_tags": [],
    "bucket_quota": {
        "enabled": false,
        "check_on_raw": false,
        "max_size": -1,
        "max_size_kb": 0,
        "max_objects": -1
    },
    "user_quota": {
        "enabled": false,
        "check_on_raw": false,
        "max_size": -1,
        "max_size_kb": 0,
        "max_objects": -1
    },
    "temp_url_keys": [],
    "type": "rgw",
    "mfa_ids": []
}

radosgw-admin subuser create --uid cl --access-key cl --secret wybsub --subuser clsub2 --key-type s3
{
    "user_id": "cl",
    "display_name": "cl",
    "email": "",
    "suspended": 0,
    "max_buckets": 1000,
    "subusers": [
        {
            "id": "cl:clsub2",
            "permissions": "<none>" 
        }
    ],
    "keys": [
        {
            "user": "cl",
            "access_key": "cl",
            "secret_key": "wybsub" 
        }
    ],
    "swift_keys": [],
    "caps": [],
    "op_mask": "read, write, delete",
    "default_placement": "",
    "default_storage_class": "",
    "placement_tags": [],
    "bucket_quota": {
        "enabled": false,
        "check_on_raw": false,
        "max_size": -1,
        "max_size_kb": 0,
        "max_objects": -1
    },
    "user_quota": {
        "enabled": false,
        "check_on_raw": false,
        "max_size": -1,
        "max_size_kb": 0,
        "max_objects": -1
    },
    "temp_url_keys": [],
    "type": "rgw",
    "mfa_ids": []
}
Actions #1

Updated by Kefu Chai almost 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 42208
Actions #2

Updated by Casey Bodley over 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF